[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/chatManager.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -150.0
margin_right = 223.0
margin_bottom = 148.0
script = ExtResource( 1 )

[node name="join" type="Button" parent="."]
margin_left = 344.0
margin_top = 264.0
margin_right = 438.0
margin_bottom = 288.0
toggle_mode = true
text = "Join"

[node name="host" type="Button" parent="."]
margin_left = 201.0
margin_top = 264.0
margin_right = 288.0
margin_bottom = 288.0
text = "Host"

[node name="ipAddr" type="LineEdit" parent="."]
margin_left = 200.0
margin_top = 232.0
margin_right = 440.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 100, 12 )
text = "127.0.0.1"
max_length = 18

[node name="Panel" type="Panel" parent="."]
margin_left = 128.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 224.0
custom_styles/panel = SubResource( 1 )

[node name="chatBox" type="TextEdit" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -311.0
margin_top = -109.0
margin_bottom = 107.0
readonly = true

[node name="chatInput" type="LineEdit" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0

[node name="nickname" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 232.0
margin_right = 192.0
margin_bottom = 256.0

[node name="leaveBTN" type="Button" parent="."]
margin_left = 368.0
margin_top = 16.0
margin_right = 417.0
margin_bottom = 36.0
text = "Leave"

[node name="userList" type="ItemList" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 121.0
margin_bottom = 226.0
max_text_lines = 15

[node name="subNick" type="Button" parent="."]
margin_left = 48.0
margin_top = 264.0
margin_right = 144.0
margin_bottom = 288.0
text = "Submit Nick"

[connection signal="pressed" from="join" to="." method="_on_Button_pressed"]
[connection signal="button_up" from="host" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="leaveBTN" to="." method="_on_leaveBTN_button_up"]
[connection signal="button_up" from="subNick" to="." method="_on_subNick_button_up"]
